--- a/Monty_Hall.ipynb
+++ b/Monty_Hall.ipynb
@@ -78,7 +78,7 @@
        "output_type": "pyout",
        "prompt_number": 1,
        "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x49388d0>"
+        "<IPython.lib.display.YouTubeVideo at 0x499a978>"
        ]
       }
      ],
@@ -89,14 +89,14 @@
      "level": 4,
      "metadata": {},
      "source": [
-      "Solutia problemei pe care un necunoscator al teoriei probabilitatilor ar da-o:"
+      "Solutia  pe care ar da-o un necunoscator al teoriei probabilitatilor:"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Codificam masina cu \"m\", si capra cu \"c\". Avem $3$  posibilitati de plasare a masinii si celor doua capre\n",
+      "Codificam masina cu \"m\" si capra cu \"c\". Avem $3$  posibilitati de plasare a masinii si celor doua capre\n",
       "in trei incaperi:\n",
       "    \n",
       "$\\Omega=\\{(m, c, c),   (c, m, c), (c, c, m)\\}$  "
@@ -163,7 +163,7 @@
       "$P(H_1|U_2)=\\displaystyle\\frac{P(H_1)P(U_2|H_1)}{P(H_1)P(U_2|H_1)+P(H_2)P(U_2|H_2)+P(H_3)P(U_2|H_3)}$\n",
       "\n",
       "\n",
-      "Deoarece $P(U_2|H_2)=0$ (adica stiind ca masina este in spatele usii 2, probabilitatea sa deschida aceasta usa este 0), avem:\n",
+      "Deoarece $P(U_2|H_2)=0$ (adica stiind ca masina este in spatele usii 2, probabilitatea ca prezentatorul  sa deschida aceasta usa este 0), avem:\n",
       "\n",
       "$P(H_1|U_2)=\\displaystyle\\frac{P(H_1)P(U_2|H_1)}{P(H_1)P(U_2|H_1)+P(H_3)P(U_2|H_3)}$"
      ]
@@ -187,19 +187,25 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Deoarece   $H_1\\cup H_2\\cup H_3=\\Omega$ si ipotezele sunt mutual explusive,  avem pe de o parte ca\n",
-      "$P_{U_2}(H_1\\cup H_2\\cup H_3)=P_{U_2}(\\Omega)=1$\n",
+      "Deoarece   $H_1\\cup H_2\\cup H_3=\\Omega$,  avem ca:\n",
+      "$P_{U_2}(H_1\\cup H_2\\cup H_3)=P_{U_2}(\\Omega)=1$. \n",
       "\n",
-      "iar pe de alta parte:\n",
+      "Ipotezele $H_1, H_2, H_3$ fiind  mutual exclusive, iar functia  $P_{U_2}$ fiind o functie  functie de probabilitate, rezulta ca:\n",
       "    \n",
-      "$P(H_1|U_2)+P(H_2|U_2)+P(H_3|U_2)=1$\n",
+      "$P(H_1|U_2)+P(H_2|U_2)+P(H_3|U_2)=1$.\n",
       "\n",
-      "Deoarece $P(H_2|U_2)=0$, avem ca:\n",
+      "Evident,  $P(H_2|U_2)=0$ si astfel probabilitatea ca masina sa fie in spatele usii 3, stiind ca in spatele celei de-a doua este o capra, este:\n",
       "    \n",
       "$P(H_3|U_2)=1-P(H_1|U_2)=1-1/3=2/3$.\n",
       "\n",
-      "Cu alte cuvinte sansa de a castiga masina este mai mare daca concurentul schimba usa aleasa initial,\n",
-      "adica alege usa 3, in cazul  abordarii noastre."
+      "Deci daca  concurentul se hotaraste sa schimbe usa  1, aleasa initial, cu unica posibilitate, adica usa 3, atunci  sansa de a castiga masina este  dubla fata de cazul in care pastreaza usa initiala."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Rationamentul si rezultatul este identic pentru orice alta alegere a concurentului si respectiv a prezentatorului."
      ]
     },
     {
@@ -361,7 +367,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Probabilitatea sa castige daca  schimba usa aleasa= 0.669\n"
+        "Probabilitatea sa castige daca  schimba usa aleasa= 0.648\n"
        ]
       }
      ],
@@ -380,7 +386,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Probabilitatea sa castige daca  schimba usa aleasa= 0.665\n"
+        "Probabilitatea sa castige daca  schimba usa aleasa= 0.6638\n"
        ]
       }
      ],
@@ -399,7 +405,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Probabilitatea sa castige daca nu  schimba usa aleasa= 0.346\n"
+        "Probabilitatea sa castige daca nu  schimba usa aleasa= 0.362\n"
        ]
       }
      ],
@@ -418,7 +424,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Probabilitatea sa castige daca nu  schimba usa aleasa= 0.33\n"
+        "Probabilitatea sa castige daca nu  schimba usa aleasa= 0.323142857143\n"
        ]
       }
      ],
@@ -465,7 +471,7 @@
        "output_type": "pyout",
        "prompt_number": 10,
        "text": [
-        "<IPython.core.display.Image at 0x49387f0>"
+        "<IPython.core.display.Image at 0x499a748>"
        ]
       }
      ],
@@ -558,7 +564,7 @@
        "output_type": "pyout",
        "prompt_number": 11,
        "text": [
-        "<IPython.core.display.HTML at 0x4938e48>"
+        "<IPython.core.display.HTML at 0x499ae80>"
        ]
       }
      ],
