--- a/Monty_Hall.ipynb
+++ b/Monty_Hall.ipynb
@@ -76,13 +76,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 1,
+       "prompt_number": 12,
        "text": [
-        "<IPython.lib.display.YouTubeVideo at 0x499a978>"
+        "<IPython.lib.display.YouTubeVideo at 0x48fecc0>"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -121,7 +121,7 @@
      "level": 4,
      "metadata": {},
      "source": [
-      "Solutia folosind formula formula lui Bayes"
+      "Solutia folosind  formula lui Bayes"
      ]
     },
     {
@@ -190,7 +190,7 @@
       "Deoarece   $H_1\\cup H_2\\cup H_3=\\Omega$,  avem ca:\n",
       "$P_{U_2}(H_1\\cup H_2\\cup H_3)=P_{U_2}(\\Omega)=1$. \n",
       "\n",
-      "Ipotezele $H_1, H_2, H_3$ fiind  mutual exclusive, iar functia  $P_{U_2}$ fiind o functie  functie de probabilitate, rezulta ca:\n",
+      "Ipotezele $H_1, H_2, H_3$ fiind  mutual exclusive, iar functia  $P_{U_2}$ fiind o  functie de probabilitate, rezulta ca:\n",
       "    \n",
       "$P(H_1|U_2)+P(H_2|U_2)+P(H_3|U_2)=1$.\n",
       "\n",
@@ -233,7 +233,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -247,7 +247,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -280,11 +280,11 @@
        "stream": "stdout",
        "text": [
         "c\n",
-        "['c', 'm']\n"
+        "['m', 'c']\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -333,7 +333,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -367,11 +367,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Probabilitatea sa castige daca  schimba usa aleasa= 0.648\n"
+        "Probabilitatea sa castige daca  schimba usa aleasa= 0.678\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -386,11 +386,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Probabilitatea sa castige daca  schimba usa aleasa= 0.6638\n"
+        "Probabilitatea sa castige daca  schimba usa aleasa= 0.6728\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -405,11 +405,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Probabilitatea sa castige daca nu  schimba usa aleasa= 0.362\n"
+        "Probabilitatea sa castige daca nu  schimba usa aleasa= 0.313\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -424,11 +424,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Probabilitatea sa castige daca nu  schimba usa aleasa= 0.323142857143\n"
+        "Probabilitatea sa castige daca nu  schimba usa aleasa= 0.345285714286\n"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -469,13 +469,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 21,
        "text": [
-        "<IPython.core.display.Image at 0x499a748>"
+        "<IPython.core.display.Image at 0x48fe908>"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -562,13 +562,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 22,
        "text": [
-        "<IPython.core.display.HTML at 0x499ae80>"
+        "<IPython.core.display.HTML at 0x48feef0>"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 22
     }
    ],
    "metadata": {}
