--- a/DistributiiProbCont.ipynb
+++ b/DistributiiProbCont.ipynb
@@ -197,7 +197,7 @@
      "metadata": {},
      "source": [
       "Densitatea de probabilitate a distributiei exponentiale, $Exp(\\theta)$, este:   \n",
-      "$f(x;\\theta)=\\left\\{\\begin{array}{ll}  0& x<0\\\\ \\displaystyle\\frac{1}{\\theta}e^{x/\\theta}&x\\geq 0\\end{array}\\right.$"
+      "$f(x;\\theta)=\\left\\{\\begin{array}{ll}  0& x<0\\\\ \\displaystyle\\frac{1}{\\theta}e^{-x/\\theta}&x\\geq 0\\end{array}\\right.$"
      ]
     },
     {
