--- a/Anim-random-walk-ro.ipynb
+++ b/Anim-random-walk-ro.ipynb
@@ -11,9 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Definim un lant Markov pe $\\mathbb{Z}_{12}$. Starile lantului sunt $\\{0,1,2,\\ldots, 11\\}$, considerate ca orele marcate pe ceas.  Cand  indicatorul arata ora H, cu probabilitatea de 1/2 el sare la una din orele vecine.\n",
+    "Definim un lant Markov pe $\\mathbb{Z}_{12}$. Starile lantului sunt $\\{0,1,2,\\ldots, 11\\}$, considerate ca orele marcate pe ceas.  Cand  indicatorul arata ora H, cu probabilitatea  1/2 el sare la una din orele vecine.\n",
     "\n",
     "Simulam miscarea aleatoare a indicatorului (adica lantul Markov asociat) in figura de mai jos.\n",
+    "\n",
+    "Initial,  indicatorul este pozitionat pe ora 12. Animam miscarea aleatoare, $X_t$, pana la momentul $t^*$, care este cel mai mic intreg pozitiv in care toate orele au fost vizitate de indicator. \n",
     "\n"
    ]
   },
